# Covid-Command-Line-Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
covtool/: __init__.py  cli.py  covtool.py  dataset.py  fetch_data.py  plot_time_series.py
covtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
covtool/data/: covid_data.ft  time.txt
tests/: test_covcli_tool.py
