[tool.poetry]
name = "covtool"
version = "0.1.0"
description = ""
authors = ["Amayo II <amayomordecai@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
click-help-colors = "^0.8"
tabulate = "^0.8.7"
click = "^7.1.2"
pyfiglet = "^0.8.post1"
pandas = "^1.1.2"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
pyarrow = "^1.0.1"
lxml = "^4.5.2"
termcolor = "^1.1.0"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
